# in_hand_manipulation_2

./: .gitignore  README.md  requirements.txt
docs/: index.md
high_level/models/config/: allegro_3d_full_zrot_valve.yaml  allegro_3d_sphere.yaml  leap_3d_open_box.yaml  leap_3d_planar_rotate.yaml  leap_3d_slider.yaml  leap_3d_wrist_zrot_any_cylinder.yaml  leap_3d_zrot_any_cylinder.yaml
high_level/models/migrate_from_drake/leap_hand_description/urdf/: leaphand.sdf  leaphand.urdf  leaphand.urdf.xacro
high_level/models/sdf/: allegro_3d_4finger.sdf  allegro_3d_4finger_no_palm.sdf  allegro_3d_sphere_rpy.sdf  allegro_3d_sphere_z2.sdf  any_cylinder_zrot.sdf  cylinder_zrot.sdf  hinge_box.sdf  leap_3d_4finger_sphere.sdf  leap_3d_4finger_tac3d_simple.sdf  leap_3d_4finger_tac3d_simple_pinocchio.sdf  leap_3d_4finger_tac3d_wrist1d_simple.sdf  one_valve_zrot_allegro.sdf  planar_rotate.sdf  planar_slider.sdf
high_level/models/yml/: allegro_3d_full_zrot.yml  allegro_3d_full_zrot_cube.yml  allegro_3d_full_zrot_valve.yml  allegro_3d_sphere.yml  leap_3d_open_box.yml  leap_3d_planar_rotate.yml  leap_3d_wrist_zrot_any_cylinder.yml  leap_3d_zrot_any_cylinder.yml  leap_3d_zrot_cube.yml
high_level/models/yml/robot/: leap_3d_4finger_no_palm.yml  leap_3d_4finger_sphere_tip.yml  leap_3d_4finger_wrist.yml
high_level/planner/common/: common_ddp.py  common_drake.py  ddp_logger.py  get_model_path.py  inhand_ddp_helper.py
high_level/planner/ddp/: action_model.py  ddp_solver.py  reference_generator.py  residual_model.py
high_level/planner/ddp/optimizer/: inhand_ddp_traj_optimizer_zrot.py
high_level/planner/ddp/optimizer/warmstart/: us_trival.npy  us_trival_allegro_rpy.npy  us_trival_cube_leap.npy  us_trival_cylinder_leap.npy  us_trival_full.npy  us_trival_full2.npy  us_trival_full3.npy  us_trival_full_cube.npy  us_trival_full_cube_leap.npy  us_trival_full_leap.npy  us_trival_leap_open_box.npy  us_trival_leap_wrist_cylinder.npy  us_trival_planar_cube_leap.npy  us_trival_planar_rotate_leap.npy  us_trival_slider_cube_leap.npy  us_trival_temp.npy  us_trival_temp2.npy  (+21 more)
high_level/planner/ddp/tasks/: inhand_ddp_full_hand_quat.py  inhand_ddp_full_hand_zrot.py  inhand_ddp_full_hand_zrot_cube.py  inhand_ddp_full_hand_zrot_v2.py  inhand_ddp_leap_open_box.py  inhand_ddp_leap_planar_rotate.py  inhand_ddp_leap_slider.py  inhand_ddp_leap_wrist_zrot_any_cylinder.py  inhand_ddp_leap_zrot_any_cylinder.py  inhand_ddp_leap_zrot_cube.py
high_level/planning_through_contact/examples/planar_pushing/: run_controller_mbp.py
high_level/quasistatic_simulator/models/yongpeng/: models
high_level/quasistatic_simulator/qsim/: model_paths.py
high_level/ros2_ws/src/contact_rich_control/: CMakeLists.txt  package.xml
high_level/ros2_ws/src/contact_rich_control/config/: high_level_ctrl_params.yaml
high_level/ros2_ws/src/contact_rich_control/contact_rich_control/: common_hw.py  high_controller_hw.py
high_level/ros2_ws/src/contact_rich_control/launch/: launch_highlevel.launch.py
high_level/ros2_ws/src/contact_rich_control/scripts/: meshcat_node.py  test_highlevel.py
high_level/ros2_ws/src/contact_rich_control/test/: test_timer.py
high_level/utils/: gen_smooth_geom.py
low_level/ros2_ws/src/inhand_lowlevel/common_msgs/: CMakeLists.txt  package.xml
low_level/ros2_ws/src/inhand_lowlevel/common_msgs/msg/: ContactState.msg  HardwareStates.msg  HybridFMCVis.msg  JointTrajectoryWrapper.msg  MeshcatVis.msg
low_level/ros2_ws/src/inhand_lowlevel/common_msgs/srv/: ReadHardwareStates.srv
low_level/ros2_ws/src/inhand_lowlevel/leap_ros2/: CMakeLists.txt  package.xml
low_level/ros2_ws/src/inhand_lowlevel/leap_ros2/config/: SoftContactLeap.json  default_params.yaml  high_level_ctrl_params_debug.yaml  leap_3d_4finger_sphere.sdf  low_level_ctrl_params.yaml  pose_estimator_config.yaml
low_level/ros2_ws/src/inhand_lowlevel/leap_ros2/launch/: launch_lowlevel.launch.py
low_level/ros2_ws/src/inhand_lowlevel/leap_ros2/leap_ros2/: contact_controller.py  contact_model_grampc.py  journal_logger.py  utils.py
low_level/ros2_ws/src/inhand_lowlevel/leap_ros2/models/yongpeng/models/config/: leap_3d_planar.yaml  leap_3d_slider.yaml  leap_3d_zrot.yaml  leap_3d_zrot_any_cylinder.yaml  leap_3d_zrot_cube.yaml  leap_3d_zrot_valve.yaml
low_level/ros2_ws/src/inhand_lowlevel/leap_ros2/models/yongpeng/models/sdf/: allegro_3d_sphere.sdf  allegro_3d_sphere_rpy.sdf  allegro_3d_valve_z.sdf  any_cylinder_zrot.sdf  cross_valve_zrot.sdf  leap_3d_4finger_capsule.sdf  planar_cube.sdf  planar_slider.sdf
low_level/ros2_ws/src/inhand_lowlevel/leap_ros2/models/yongpeng/models/urdf/: test_pinocchio.py
low_level/ros2_ws/src/inhand_lowlevel/leap_ros2/models/yongpeng/models/yml/: allegro_3d.yml  allegro_3d_ext_contacts.yml  allegro_3d_full.yml  allegro_3d_full_rpy.yml  allegro_3d_full_zrot.yml  allegro_3d_full_zrot_cube.yml  allegro_3d_full_zrot_valve.yml  dex_2d.yml  leap_3d_planar.yml  leap_3d_slider.yml  leap_3d_zrot.yml  leap_3d_zrot_any_cylinder.yml  leap_3d_zrot_cube.yml  leap_3d_zrot_valve.yml  push_2d.yml
low_level/ros2_ws/src/inhand_lowlevel/leap_ros2/models/yongpeng/models/yml/robot/: leap_3d_4finger_no_palm.yml
low_level/ros2_ws/src/inhand_lowlevel/leap_ros2/scripts/: hardware_state_manager.py  low_controller_hw.py
low_level/ros2_ws/src/inhand_lowlevel/leap_ros2/scripts/journal/: generate_so3_targets.py  test_system_with_reset.py
low_level/ros2_ws/src/inhand_lowlevel/leap_ros2/scripts/journal/data/: quat_targets-250318.npy
low_level/ros2_ws/src/inhand_lowlevel/my_mujoco_ros/: CMakeLists.txt  package.xml
low_level/ros2_ws/src/inhand_lowlevel/my_mujoco_ros/config/allegro/: mujoco_config.yaml  sensor_config.yaml
low_level/ros2_ws/src/inhand_lowlevel/my_mujoco_ros/config/leap/: mujoco_config.yaml  sensor_config.yaml
low_level/ros2_ws/src/inhand_lowlevel/my_mujoco_ros/launch/: launch_mujoco.py
low_level/ros2_ws/src/inhand_lowlevel/my_mujoco_ros/my_mujoco_ros/: utils.py
low_level/ros2_ws/src/inhand_lowlevel/my_mujoco_ros/scripts/: mujoco_ros_core.py
low_level/ros2_ws/src/inhand_lowlevel/my_mujoco_ros/srv/: ApplyLinkFT.srv
(+50 files in other folders)
