<package format="3">
    <name>leap_ros2</name>
    <version>1.0.0</version>
    <description>
        This package provides an interface to the Leap Hands
    </description>
    <maintainer email="eharber@ucla.edu">Evan Harber</maintainer>
    <license>MIT</license>

    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>common_msgs</depend>
    <depend>my_mujoco_ros</depend>
    <depend>apriltag_ros</depend>
    <depend>builtin_interfaces</depend>

    <build_depend>rosidl_typesupport_c</build_depend>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    
    <member_of_group>rosidl_interface_packages</member_of_group>

    <exec_depend>python3-numpy</exec_depend>
    <exec_depend>python3-opencv</exec_depend>
    <exec_depend>python3-yaml</exec_depend>
    <exec_depend>ros2launch</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>rosidl_typesupport_c</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
